<resources>
    <string name="app_name">Meraki</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="not_a_member"><u>Not a member?</u></string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_a_member"><u>Already a member?</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_email">Send Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help" />
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="home">Home</string>

</resources>
